--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wdth@75&family=Roboto+Condensed:ital,wght@0,300;1,300&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Crown Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
